--- a/projects/storefrontstyles/scss/components/product/search/_searchbox.scss
+++ b/projects/storefrontstyles/scss/components/product/search/_searchbox.scss
@@ -304,6 +304,9 @@
 
         @include forFeature('a11yKeyboardFocusInSearchBox') {
           &:focus-within {
+            padding-top: 27px;
+            padding-right: 10px;
+            padding-bottom: 8px;
             outline: 0;
           }
         }
@@ -324,7 +327,6 @@
         border-radius: 4px;
 
         @include forFeature('a11yKeyboardFocusInSearchBox') {
-          margin-right: 6px;
           &:focus {
             @include visible-focus();
           }
