CXSPA-9098, add e-2-e test cases

--- a/projects/storefrontlib/cms-components/myaccount/my-coupons/claim-dialog/claim-dialog.component.html
+++ b/projects/storefrontlib/cms-components/myaccount/my-coupons/claim-dialog/claim-dialog.component.html
@@ -37,8 +37,8 @@
       </button>
     </div>
     <!-- Modal Body -->
-    <div class="cx-dialog-body">
-      <form (ngSubmit)="onSubmit()" [formGroup]="form">
+    <div class="cx-dialog-body modal-body">
+      <form (ngSubmit)="onSubmit()" [formGroup]="form" class="cx-dialog-item">
       
         <label>
           <span class="label-content"
