--- a/feature-libs/product-configurator/rulebased/components/previous-next-buttons/configurator-previous-next-buttons.component.html
+++ b/feature-libs/product-configurator/rulebased/components/previous-next-buttons/configurator-previous-next-buttons.component.html
@@ -8,7 +8,7 @@
         'configurator.a11y.previous'
           | cxTranslate
             : {
-                group: getPreviousGroupDescription(configuration),
+                group: getPreviousGroupDescription(configuration) | async,
               }
       "
     >
@@ -22,7 +22,7 @@
         'configurator.a11y.next'
           | cxTranslate
             : {
-                group: getNextGroupDescription(configuration),
+                group: getNextGroupDescription(configuration) | async,
               }
       "
     >
