--- a/projects/storefrontstyles/scss/components/myaccount/_my-claim-dialog.scss
+++ b/projects/storefrontstyles/scss/components/myaccount/_my-claim-dialog.scss
@@ -54,13 +54,12 @@
       }
 
       .cx-dialog-row--reset-button {
-        padding:0 12px 0 0
+        padding: 0 12px 0 0;
       }
 
       .cx-dialog-row-submit-button {
-        padding:0 0 0 12px
+        padding: 0 0 0 12px;
       }
-
     }
   }
 }
