--- a/projects/storefrontlib/cms-components/myaccount/consent-management/components/consent-form/consent-management-form.component.html
+++ b/projects/storefrontlib/cms-components/myaccount/consent-management/components/consent-form/consent-management-form.component.html
@@ -4,7 +4,7 @@
       type="checkbox"
       class="form-check-input"
       (change)="onConsentChange()"
-      [checked]="useGetterForIsConsentGiven ? isConsentGiven : consentGiven"
+      [checked]="consentGiven"
       [name]="consentTemplate.id"
       [disabled]="disabled || isRequired(consentTemplate?.id)"
     />
