hide consent management button in the tab when the banner is visible

--- a/projects/storefrontlib/cms-components/anonymous-consent-management/open-dialog/anonymous-consent-open-dialog.component.html
+++ b/projects/storefrontlib/cms-components/anonymous-consent-management/open-dialog/anonymous-consent-open-dialog.component.html
@@ -1,3 +1,13 @@
-<button #open class="btn btn-link" (click)="openDialog()">
-  {{ 'anonymousConsents.dialog.title' | cxTranslate }}
-</button>
+<ng-container *cxFeature="'!a11yHideConsentButtonWhenBannerVisible'">
+  <button #open class="btn btn-link" (click)="openDialog()">
+    {{ 'anonymousConsents.dialog.title' | cxTranslate }}
+  </button>
+</ng-container>
+
+<ng-container *cxFeature="'a11yHideConsentButtonWhenBannerVisible'">
+  <ng-container *ngIf="!(bannerVisible$ | async)">
+    <button #open class="btn btn-link" (click)="openDialog()">
+      {{ 'anonymousConsents.dialog.title' | cxTranslate }}
+    </button>
+  </ng-container>
+</ng-container>
