fix: fixing linting issue

--- a/feature-libs/user/account/components/login/login.component.html
+++ b/feature-libs/user/account/components/login/login.component.html
@@ -4,7 +4,7 @@
       {{ greeting$ | async }}
     </div>
     <cx-page-slot
-      (buttonAdded)="onDomChange(greeting)"
+      (cxButtonAdded)="onDomChange(greeting)"
       id="account-nav"
       position="HeaderLinks"
     ></cx-page-slot>
