refactor: address PR comment - change cxDomChange directive  implementation to be more generic

--- a/feature-libs/user/account/components/login/login.component.html
+++ b/feature-libs/user/account/components/login/login.component.html
@@ -4,7 +4,8 @@
       {{ greeting$ | async }}
     </div>
     <cx-page-slot
-      (cxButtonAdded)="onDomChange(greeting)"
+      (cxDomChange)="onRootNavBtnAdded($event, greeting)"
+      cxDomChangeTargetSelector="nav ul li:first-child button"
       id="account-nav"
       position="HeaderLinks"
     ></cx-page-slot>
