--- a/projects/storefrontlib/cms-components/navigation/navigation/navigation-ui.component.html
+++ b/projects/storefrontlib/cms-components/navigation/navigation/navigation-ui.component.html
@@ -109,7 +109,7 @@
               [attr.aria-haspopup]="true"
               [attr.aria-expanded]="false"
               [attr.aria-controls]="node.title"
-              [attr.aria-describedby]="getAriaDescribedbyOfButton(node)"
+              [attr.aria-describedby]="'greeting'"
               (click)="toggleOpen($any($event))"
               (mouseenter)="onMouseEnter($event)"
               (keydown.space)="onSpace($any($event))"
@@ -129,9 +129,9 @@
               [attr.role]="(isDesktop$ | async) && depth ? 'heading' : 'button'"
               [attr.aria-haspopup]="true"
               [attr.aria-expanded]="false"
-              [attr.aria-label]="node.title"
-              [attr.aria-controls]="node.title"
-              [attr.aria-describedby]="'greeting'"
+              [attr.aria-label]="getAriaLabelAndControl(node)"
+              [attr.aria-controls]="getAriaLabelAndControl(node)"
+              [attr.aria-describedby]="getAriaDescribedbyOfButton(node)"
               (click)="toggleOpen($any($event))"
               (mouseenter)="onMouseEnter($event)"
               (keydown.space)="onSpace($any($event))"
