--- a/projects/storefrontstyles/scss/components/product/list/_facet.scss
+++ b/projects/storefrontstyles/scss/components/product/list/_facet.scss
@@ -181,7 +181,14 @@ $intialExpandedFacetsLarge: 3 !default;
       background-color: var(--cx-color-primary);
       border-color: var(--cx-color-primary);
       color: var(--cx-color-inverse);
+
+      @include cx-highContrastTheme-dark {
+        background-color: transparent;
+        border-color: var(--cx-color-dark);
+      }
     }
+
+
   }
 
   @mixin native-high-contrast-fix {
