--- a/projects/styles/bootstrap-copy/scss/_close.scss
+++ b/projects/styles/bootstrap-copy/scss/_close.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 .close {
   float: right;
   @include font-size($close-font-size);
