--- a/projects/styles/bootstrap-copy/scss/_grid.scss
+++ b/projects/styles/bootstrap-copy/scss/_grid.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Container widths
 //
 // Set the container width, and override it for fixed navbars in media queries.
