--- a/projects/styles/bootstrap-copy/scss/_mixins.scss
+++ b/projects/styles/bootstrap-copy/scss/_mixins.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Toggles
 //
 // Used in conjunction with global variables to enable certain theme features.
