--- a/projects/styles/bootstrap-copy/scss/_nav.scss
+++ b/projects/styles/bootstrap-copy/scss/_nav.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Base class
 //
 // Kickstart any navigation component with a set of style resets. Works with
