--- a/projects/styles/bootstrap-copy/scss/_variables.scss
+++ b/projects/styles/bootstrap-copy/scss/_variables.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Variables
 //
 // Variables should follow the `$component-state-property-size` formula for
