--- a/projects/styles/bootstrap-copy/scss/mixins/_alert.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_alert.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 @mixin alert-variant($background, $border, $color) {
   color: $color;
   @include gradient-bg($background);
