--- a/projects/styles/bootstrap-copy/scss/mixins/_badge.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_badge.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 @mixin badge-variant($bg) {
   color: color-yiq($bg);
   background-color: $bg;
