--- a/projects/styles/bootstrap-copy/scss/mixins/_box-shadow.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_box-shadow.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 @mixin box-shadow($shadow...) {
   @if $enable-shadows {
     $result: ();
