--- a/projects/styles/bootstrap-copy/scss/mixins/_breakpoints.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_breakpoints.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Breakpoint viewport sizes and media queries.
 //
 // Breakpoints are defined as a map of (name: minimum width), order from small to large:
