--- a/projects/styles/bootstrap-copy/scss/mixins/_buttons.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_buttons.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Button variants
 //
 // Easily pump out default styles, as well as :hover, :focus, :active,
