--- a/projects/styles/bootstrap-copy/scss/mixins/_deprecate.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_deprecate.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Deprecate mixin
 //
 // This mixin can be used to deprecate mixins or functions.
