--- a/projects/styles/bootstrap-copy/scss/mixins/_grid-framework.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_grid-framework.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Framework grid generation
 //
 // Used only by Bootstrap to generate the correct number of grid classes given
