--- a/projects/styles/bootstrap-copy/scss/mixins/_hover.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_hover.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Hover mixin and `$enable-hover-media-query` are deprecated.
 //
 // Originally added during our alphas and maintained during betas, this mixin was
