--- a/projects/styles/bootstrap-copy/scss/mixins/_list-group.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_list-group.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // List Groups
 
 @mixin list-group-item-variant($state, $background, $color) {
