--- a/projects/styles/bootstrap-copy/scss/mixins/_lists.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_lists.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Lists
 
 // Unstyled keeps list items block level, just removes default browser padding and list-style
