--- a/projects/styles/bootstrap-copy/scss/mixins/_nav-divider.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_nav-divider.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Horizontal dividers
 //
 // Dividers (basically an hr) within dropdowns and nav lists
