--- a/projects/styles/bootstrap-copy/scss/mixins/_reset-text.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_reset-text.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 @mixin reset-text() {
   font-family: $font-family-base;
   // We deliberately do NOT reset font-size or word-wrap.
