--- a/projects/styles/bootstrap-copy/scss/mixins/_screen-reader.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_screen-reader.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Only display content to screen readers
 //
 // See: https://www.a11yproject.com/posts/2013-01-11-how-to-hide-content/
