--- a/projects/styles/bootstrap-copy/scss/mixins/_text-hide.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_text-hide.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // CSS image replacement
 @mixin text-hide($ignore-warning: false) {
   // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
