--- a/projects/styles/bootstrap-copy/scss/mixins/_text-truncate.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_text-truncate.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 // Text truncate
 // Requires inline-block or block for proper styling
 
