--- a/projects/styles/bootstrap-copy/scss/utilities/_screenreaders.scss
+++ b/projects/styles/bootstrap-copy/scss/utilities/_screenreaders.scss
@@ -1,3 +1,8 @@
+/*
+* Bootstrap v4.6.2 (https://getbootstrap.com/)
+* Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+*/
+
 //
 // Screenreaders
 //
