test and fix dialogs affected by the removal of extended bootstrap classes

--- a/feature-libs/user/profile/components/address-book/address-form/suggested-addresses-dialog/suggested-addresses-dialog.component.html
+++ b/feature-libs/user/profile/components/address-book/address-form/suggested-addresses-dialog/suggested-addresses-dialog.component.html
@@ -7,7 +7,7 @@
 >
   <div
     *ngIf="data$ | async as data"
-    class="modal-contentcx-suggested-addresses-container"
+    class="modal-content cx-suggested-addresses-container"
   >
     <div class="cx-suggested-addresses-header cx-modal-header">
       <h3
