--- a/projects/storefrontstyles/scss/components/content/navigation/_my-account-v2-navigation.scss
+++ b/projects/storefrontstyles/scss/components/content/navigation/_my-account-v2-navigation.scss
@@ -6,7 +6,7 @@
   a {
     font-size: var(--cx-font-medium);
     font-weight: bold;
-    width: 250px;
+    width: 100%;
     height: 50px;
     display: flex;
     text-indent: 5px;
@@ -28,7 +28,7 @@
       padding: 10px 5px 15px 5px;
       background-color: var(--cx-color-background);
       border: 1px solid var(--cx-color-medium);
-      width: 250px;
+      width: 100%;
       height: 40px;
       margin-top: 20px;
       margin-bottom: 0px;
@@ -60,14 +60,13 @@
 @media screen and (max-width: 544px) {
   cx-navigation-ui h4,
   span {
-    width: 100% !important;
     font-size: 14px;
   }
-  cx-my-account-v2-navigation a {
-    width: 100% !important;
-    height: auto !important;
-    padding: 19px 0 19px 2px !important;
-    font-size: 12px !important;
+  cx-my-account-v2-navigation a,cx-my-account-v2-navigation .fas {
+    // width: 100% !important;
+    height: auto ;
+    padding: 19px 0 19px 2px ;
+    font-size: 12px ;
   }
 }
 @media screen and (max-width: 444px) {
@@ -75,7 +74,7 @@
   span {
     font-size: 11px;
   }
-  cx-my-account-v2-navigation a {
-    font-size: 10px !important;
+  cx-my-account-v2-navigation a,cx-my-account-v2-navigation .fas {
+    font-size: 10px ;
   }
 }
