--- a/feature-libs/user/profile/components/register/register.component.html
+++ b/feature-libs/user/profile/components/register/register.component.html
@@ -10,6 +10,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="cx-section">
+        <!-- TODO: (CXSPA-5953) Remove feature flags next major -->
         <p *cxFeature="'a11yRequiredAsterisks'" class="form-legend">
           {{ 'formLegend.required' | cxTranslate }}
         </p>
