--- a/feature-libs/user/account/components/register-verification-token-form/register-verification-token-form.component.html
+++ b/feature-libs/user/account/components/register-verification-token-form/register-verification-token-form.component.html
@@ -15,7 +15,7 @@
       "
       aria-describedby="tokenInputHint"
     />
-    <!-- <cx-form-errors [control]="form.get('tokenCode')"></cx-form-errors> -->
+    <cx-form-errors [control]="form.get('tokenCode')"></cx-form-errors>
   </label>
   <span id="tokenInputHint" class="cx-visually-hidden">
     {{ 'verificationTokenForm.tokenInputHint' | cxTranslate }}
