--- a/feature-libs/user/profile/components/address-book/address-form/suggested-addresses-dialog/suggested-addresses-dialog.component.html
+++ b/feature-libs/user/profile/components/address-book/address-form/suggested-addresses-dialog/suggested-addresses-dialog.component.html
@@ -36,7 +36,7 @@
         </span>
       </button>
     </div>
-    <div class="modal-body cx-suggested-addresses-body" ngForm>
+    <div class="modal-body" ngForm>
       <div class="cx-dialog-info">
         <p>
           {{ 'addressSuggestion.ensureAccuracySuggestChange' | cxTranslate }}
