--- a/projects/styles/bootstrap-copy/scss/mixins/_image.scss
+++ b/projects/styles/bootstrap-copy/scss/mixins/_image.scss
@@ -3,6 +3,8 @@
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ *
+ * DO NOT MODIFY THIS FILE. It preserves compatibility with Bootstrap 4.6 docs.
  */
 
 // Image Mixins
@@ -32,7 +34,7 @@
   // but doesn't convert dppx=>dpi.
   // There's no such thing as unprefixed min-device-pixel-ratio since it's nonstandard.
   // Compatibility info: https://caniuse.com/css-media-resolution
-  @media only screen and (min-resolution: 192dpi),
+  @media only screen and (min-resolution: 192dpi) {
     // IE9-11 don't support dppx only screen and (min-resolution: 2dppx) {
     // Standardized
     background-image: url($file-2x);
