--- a/feature-libs/organization/user-registration/components/verification-token-form/verification-token-form.component.html
+++ b/feature-libs/organization/user-registration/components/verification-token-form/verification-token-form.component.html
@@ -23,7 +23,7 @@
 
   <input type="hidden" formControlName="tokenId" [(ngModel)]="tokenId" />
 
-  <div class="resend-link-text">
+  <div class="resend-link-text register-b2b-otp-resend-link-text">
     <div class="left-text">
       <span role="timer" aria-live="polite" aria-atomic="true">
         <a
