--- a/feature-libs/user/account/styles/_verification-token-form.scss
+++ b/feature-libs/user/account/styles/_verification-token-form.scss
@@ -29,6 +29,10 @@
       }
     }
 
+    .register-b2b-otp-resend-link-text {
+      margin-top: -1rem;
+    }
+
     .verify-container {
       width: 100%;
       margin-top: 2.5rem;
