--- a/feature-libs/organization/administration/components/shared/form/form.component.html
+++ b/feature-libs/organization/administration/components/shared/form/form.component.html
@@ -14,7 +14,12 @@
     >
       {{ 'organization.save' | cxTranslate }}
     </button>
-    <button actions class="link btn btn-link btn-sm" routerLink="../" type="button">
+    <button
+      actions
+      class="link btn btn-link btn-sm"
+      routerLink="../"
+      type="button"
+    >
       <!--
         We leverage the soft-close feature from the split view, so that the animation
         has time to kick in before the router outlet is deleted.
