--- a/feature-libs/organization/administration/components/shared/message/confirmation/confirmation-message.component.html
+++ b/feature-libs/organization/administration/components/shared/message/confirmation/confirmation-message.component.html
@@ -13,7 +13,10 @@
       {{ cancelText | cxTranslate }}
     </button>
 
-    <button class="button btn btn-sm primary btn-primary confirm" (click)="confirm()">
+    <button
+      class="button btn btn-sm primary btn-primary confirm"
+      (click)="confirm()"
+    >
       {{ confirmText | cxTranslate }}
     </button>
   </div>
