--- a/feature-libs/organization/administration/components/user/change-password-form/user-change-password-form.component.html
+++ b/feature-libs/organization/administration/components/user/change-password-form/user-change-password-form.component.html
@@ -10,7 +10,12 @@
     <button actions class="button btn btn-sm primary btn-primary">
       {{ 'organization.save' | cxTranslate }}
     </button>
-    <button actions class="link btn btn-link btn-sm" routerLink="../" type="button">
+    <button
+      actions
+      class="link btn btn-link btn-sm"
+      routerLink="../"
+      type="button"
+    >
       {{ 'organization.cancel' | cxTranslate }}
     </button>
 
