fix code review comments
fix code review comments

--- a/feature-libs/user/profile/components/otp-login-register/otp-login-register.component.html
+++ b/feature-libs/user/profile/components/otp-login-register/otp-login-register.component.html
@@ -14,7 +14,7 @@
           <div class="form-group">
             <label>
               <span class="label-content">{{
-                'register.titleOptional' | cxTranslate
+                'register.title' | cxTranslate
               }}</span>
               <ng-select
                 [clearable]="false"
