fix code review comments
fix code review comments

--- a/feature-libs/user/profile/styles/_otp-register-form.scss
+++ b/feature-libs/user/profile/styles/_otp-register-form.scss
@@ -12,9 +12,9 @@
   }
   .label-content {
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
-    line-height: 21.79px;
+    line-height: 1.361875rem;
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
